@@ -59,7 +59,7 @@
                              [figwheel-sidecar "0.5.4-7"]
                              [com.cemerick/piggieback "0.2.1"]
                              [org.clojure/tools.nrepl "0.2.12"]]
-
+              :jvm-opts ["--add-modules" "java.xml.bind"]
               :plugins [[lein-figwheel "0.5.4-7"]]
 
               :cljsbuild {:builds
